crates/sith_python_parser/tests/snapshots/invalid_syntax@global_stmt_empty.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/global_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        range: 0..7,
        body: [
            Global(
                GlobalStmt {
                    range: 0..6,
                    names: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | global
  |       ^ Syntax Error: Global statement must have at least one name
  |
