crates/sith_python_parser/tests/snapshots/invalid_syntax@if_stmt_empty_body.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/if_stmt_empty_body.py
---
## AST

```
Module(
    ModModule {
        range: 0..15,
        body: [
            If(
                IfStmt {
                    range: 0..8,
                    test: BooleanLiteral(
                        BooleanLiteralExpr {
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [],
                    elif_else_clauses: [],
                },
            ),
            Expr(
                ExprStmt {
                    range: 9..14,
                    value: BinOp(
                        BinOpExpr {
                            range: 9..14,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 9..10,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 13..14,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if True:
2 | 1 + 1
  | ^ Syntax Error: Expected an indented block after `if` statement
  |
